# xpn

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  build.sh  configure.ac  xpn_conf.txt
docs/: xpn_server_monitor.md
include/base/: fabric.h  ns.h  socket.h
include/mpi_server/: mpi_server_comm.h
include/xpn_client/nfi/: nfi_lib.h
include/xpn_client/nfi/nfi_fabric_server/: nfi_fabric_server_comm.h
include/xpn_client/nfi/nfi_mpi_server/: mpi_server_comm.h
include/xpn_client/nfi/nfi_xpn_server/: nfi_xpn_server.h
include/xpn_server/: xpn_server_comm.h  xpn_server_params.h
include/xpn_server/fabric_server/: fabric_server_comm.h
info/: CHANGELOG.md
scripts/: dev-build.sh
scripts/compile/: build-me-platform-watch.sh  build-me-xpn.sh  watch_dir.sh
scripts/compile/platform/: c3-dario-dmtcp.sh  c3-dario.sh  cte-arm-fuji.sh  unito-dario.sh
scripts/compile/software/: xpn.sh
scripts/execute/: mk_conf.sh  xpn.sh
src/base/: Makefile.am  fabric.c  socket.c  syscall_proxies.c
src/base_c/: debug_msg.c  debug_msg.h  syscall_proxies.c  syscall_proxies.h
src/base_cpp/: CMakeLists.txt  args.hpp  debug.cpp  debug.hpp  fabric.cpp  fabric.hpp  filesystem.hpp  profiler.cpp  profiler.hpp  proxy.hpp  queue_pool.hpp  socket.cpp  socket.hpp  subprocess.hpp  timer.hpp  workers.cpp  workers.hpp  workers_on_demand.cpp  workers_on_demand.hpp  workers_pool.cpp  workers_pool.hpp  xpn_conf.cpp  xpn_conf.hpp  xpn_env.cpp  xpn_env.hpp  xpn_parser.cpp  xpn_parser.hpp  xpn_path.cpp
src/bypass/: CMakeLists.txt  Makefile.in  lfi_bypass.cpp  xpn_bypass.c  xpn_bypass.cpp  xpn_bypass.h  xpn_bypass_dmtcp.cpp  xpn_dmtcp.cpp
src/connector_fuse/: CMakeLists.txt  fuse-xpn.cpp
src/mpi_server/: Makefile.in  mpi_server.c  mpi_server_comm.c  mpi_server_d2xpn.c  mpi_server_ops.c  mpi_server_params.c
src/sck_server/: Makefile.in  sck_server.c  sck_server_params.c
src/utils/: CMakeLists.txt  Makefile.am  xpn_expand.cpp  xpn_flush.cpp  xpn_preload.cpp  xpn_rebuild_active_reader.cpp  xpn_server_monitor.cpp  xpn_server_stats.cpp  xpn_shrink.cpp  xpn_tree.c
src/xpn_client/: CMakeLists.txt  Makefile.am  xpn.h  xpn_unistd.c  xpn_unistd.cpp
src/xpn_client/nfi/: CMakeLists.txt  nfi_server.cpp  nfi_server.hpp  nfi_xpn_server_comm.cpp  nfi_xpn_server_comm.hpp
src/xpn_client/nfi/common/: nfi_worker.c
src/xpn_client/nfi/nfi_fabric_server/: CMakeLists.txt  nfi_fabric_server_comm.c  nfi_fabric_server_comm.cpp  nfi_fabric_server_comm.hpp
src/xpn_client/nfi/nfi_local/: nfi_local.cpp  nfi_local.hpp
src/xpn_client/nfi/nfi_mpi_server/: CMakeLists.txt  mpi_server_comm.c  nfi_mpi_server.c  nfi_mpi_server_comm.cpp  nfi_mpi_server_comm.hpp
src/xpn_client/nfi/nfi_mq_server/: CMakeLists.txt  nfi_mq_server_comm.cpp  nfi_mq_server_comm.hpp
src/xpn_client/nfi/nfi_mqtt_server/: CMakeLists.txt  nfi_mqtt_server_comm.cpp  nfi_mqtt_server_comm.hpp
src/xpn_client/nfi/nfi_sck_server/: CMakeLists.txt  nfi_sck_server_comm.cpp  nfi_sck_server_comm.hpp
src/xpn_client/nfi/nfi_xpn_server/: nfi_xpn_server.c  nfi_xpn_server.cpp  nfi_xpn_server.hpp  nfi_xpn_server_comm.c
src/xpn_client/xpn/: xpn_api.hpp  xpn_file.hpp  xpn_file_table.hpp  xpn_metadata.hpp  xpn_partition.hpp  xpn_rw.hpp  xpn_stats.hpp
src/xpn_client/xpn/utils/: xpn_conf.cpp  xpn_file_table.cpp  xpn_metadata.cpp  xpn_partition.cpp  xpn_rw.cpp
src/xpn_client/xpn/xpn_api/: xpn_api_cwd.cpp  xpn_api_dir.cpp  xpn_api_f_file.cpp  xpn_api_file.cpp  xpn_api_malleability.cpp  xpn_api_metadata.cpp  xpn_api_rw.cpp  xpn_api_stat.cpp  xpn_api_xpn.cpp
src/xpn_client/xpn/xpn_simple/policy/: xpn_policy_init.c  xpn_policy_rw.c
src/xpn_client/xpn/xpn_simple/xpncore/: xpn_rw.c  xpn_rw.c-new
src/xpn_controller/: CMakeLists.txt  xpn_controller.cpp  xpn_controller.hpp  xpn_controller_ops.cpp  xpn_controller_recv.cpp  xpn_controller_send.cpp
src/xpn_server/: CMakeLists.txt  Makefile.am  xpn_server.c  xpn_server.cpp  xpn_server.hpp  xpn_server_comm.c  xpn_server_comm.cpp  xpn_server_comm.hpp  xpn_server_ops.cpp  xpn_server_ops.hpp  xpn_server_params.c  xpn_server_params.cpp  xpn_server_params.hpp
src/xpn_server/fabric_server/: CMakeLists.txt  fabric_server_comm.c  fabric_server_comm.cpp  fabric_server_comm.hpp
src/xpn_server/filesystem/: xpn_server_filesystem.cpp  xpn_server_filesystem.hpp  xpn_server_filesystem_disk.cpp  xpn_server_filesystem_disk.hpp  xpn_server_filesystem_xpn.cpp  xpn_server_filesystem_xpn.hpp
src/xpn_server/mpi_server/: CMakeLists.txt  mpi_server_comm.cpp  mpi_server_comm.hpp
src/xpn_server/mq_server/: CMakeLists.txt  mq_server_comm.cpp  mq_server_comm.hpp  mq_server_ops.cpp  mq_server_ops.hpp  mq_server_utils.cpp  mq_server_utils.hpp
src/xpn_server/mqtt_server/: CMakeLists.txt  mqtt_server_comm.cpp  mqtt_server_comm.hpp  mqtt_server_ops.cpp  mqtt_server_ops.hpp  mqtt_server_utils.cpp  mqtt_server_utils.hpp
src/xpn_server/sck_server/: CMakeLists.txt  sck_server_comm.cpp  sck_server_comm.hpp
test/: CMakeLists.txt
test/integrity/bypass_c/: open-read-close.c  open-write-close.c
test/integrity/libfabric/: CMakeLists.txt  fabric_test.cpp
test/integrity/xpn/: test-1-wos.sh  test-1-ws.sh  test-2.sh
test/integrity/xpn_metadata/: Makefile.in
test/integrity/xpn_reconnect/: CMakeLists.txt  xpn_reconnect.cpp
test/performance/xpn/: CMakeLists.txt  Makefile.in  open-read-close-thread.cpp  open-read-close.c  open-write-close-thread.cpp  open-write-close.c
test/performance/xpn-fault-tolerant/: Makefile.in  rnd-write-read-cmp.c  server-write-read.c  write-server-read.c
test/regresion/: CMakeLists.txt  fwrite-fread.cpp  init-destroy.cpp  readdir.cpp  setup.hpp  write-read.cpp
